src/test/deca/context/valid/class/valid_cast_same_type.deca
// Description:
// Test valid cast between identical types
// Test rule 3.29
//
// [Begin Result]
//Aucun problème détecté
// [End Result]
//
// History:
// cree le 07/01/2025
{
    int i = (int)(42); // Conversion autorisée : même type
}
